# taskcards-monitor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  email-config.example.yaml  pyproject.toml  test_api_flow.sh
.github/: dependabot.yml
.github/workflows/: docker-build.yml  pypi-publish.yml  test.yml
docs/: AUTHENTICATION_FLOW.md  DOCKER.md
taskcards_monitor/: __init__.py  changes.py  cli.py  database.py  display.py  email_notifier.py  email_template.html  extract_board_data.js  fetcher.py  models.py  monitor.py
tests/: test_cli.py  test_display.py  test_email_notifier.py  test_fetcher.py  test_monitor.py
