[project]
name = "taskcards-monitor"
version = "0.7.3"
description = "Monitor TaskCards boards for changes using GraphQL API"
readme = "README.md"
authors = [
    { name = "Timo Schäpe", email = "info@timoschaepe.de" }
]
requires-python = ">=3.10"
dependencies = [
    "click==8.3.1",
    "httpx==0.28.1",
    "rich==14.2.0",
    "pyyaml==6.0.3",
    "jinja2==3.1.6",
    "peewee==3.19.0",
]

[project.scripts]
taskcards-monitor = "taskcards_monitor.cli:main"

[dependency-groups]
test = [
    "pytest==9.0.2",
    "pytest-mock==3.15.1",
    "pytest-cov==7.0.0",
]
dev = [
    { include-group = "test" },
    "ruff==0.14.13",
    "pre-commit==4.5.1",
    "ty==0.0.11",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["taskcards_monitor"]

[tool.pytest.ini_options]
addopts = [
    "--cov=taskcards_monitor",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[project.urls]
Source = "https://github.com/molecode/taskcards-monitor"
Issues = "https://github.com/molecode/taskcards-monitor/issues"
Changelog = "https://github.com/molecode/taskcards-monitor/releases"
